# XPTViewer

./: .gitignore  README.md  global.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  create_icon.sh  setup-icon.sh  tauri.conf.json
src-tauri/src/: main.rs  xpt_parser.rs
