[package]
name = "xptviewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
# Using our own XPT parser implementation instead of readstat

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
